<resources>
    <!-- System Strings -->
    <string name="app_name">CashFlow Beta</string>
    <string name="title_activity_records">RecordsActivity</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_records_edit">RecordsEditActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Activity Captions and ActionBar Buttons' Hints -->
    <string name="action_records">Записи</string>
    <string name="action_categories">Категории</string>
    <string name="action_settings">Настройки</string>
    <string name="action_delete">Удалить</string>

    <!-- Main Activity -->
    <string name="main_caption">"Новая запись"</string>
    <string name="cat_caption">Категория</string>
    <string name="comment_textview_hint">Комментарий</string>
    <string name="main_activity_record_added">Запись добавлена</string>
    <string name="add_record_button_text">ДОБАВИТЬ ЗАПИСЬ</string>
    <string name="category_spin_hint">Категория</string>
    <string name="amount_label_text">Сумма:</string>
    <string name="date_label_text">Дата:</string>

    <!-- Record Edit Activity -->
    <string name="save_record_button_text">СОХРАНИТЬ ЗАПИСЬ</string>
    <string name="record_edit_caption">Изменить запись</string>

    <!-- Settings Activity -->
    <string name="settings_caption">Настройки</string>

    <!-- Category Dialogs -->
    <string name="category_dialog_header">Изменить категорию</string>
    <string name="category_dialog_header2">Новая категория</string>
    <string name="category_dialog_check">Приоритетная категория</string>
    <string name="category_dialog_cancel_text">Отменить</string>
    <string name="category_dialog_save_text">Сохранить</string>
    <string name="category_dialog_delete_text">Удалить</string>
    <string name="category_dialog_error_name_text">Название категории не может быть пустым</string>
    <string name="category_dialog_error_exists_text">Категория с таким названием уже существует</string>
    <string name="category_dialog_category_in_use">Данная категория используется в записях. Переименуйте категорию, или удалите эти записи перед удалением категории</string>
    <string name="category_dialog_item_added">Категория добавлена</string>
    <string name="category_dialog_item_deleted">Категория удалена</string>
    <string name="category_dialog_item_saved">Категория сохранена</string>

    <!-- Record Dialog -->
    <string name="record_dialog_header">Изменить запись</string>
    <string name="record_dialog_cancel_text">Отменить</string>
    <string name="record_dialog_save_text">Сохранить</string>
    <string name="record_dialog_delete_text">Удалить</string>
    <string name="record_dialog_item_deleted">Запись удалена</string>
    <string name="record_dialog_item_saved">Запись сохранена</string>

    <!-- Message Dialog -->
    <string name="message_dialog_header_error">Ошибка</string>
    <string name="message_dialog_header_warning">Предупреждение</string>
    <string name="message_dialog_header_info">Информация</string>
    <string name="message_dialog_msg_empty_amount">Поле суммы не может быть пустым. Введите расход/доход.</string>
    <string name="message_dialog_msg_format_amount">Неправильный формат поля расхода</string>
    <string name="message_dialog_msg_empty_category">Необходимо выбрать категорию расходов/доходов</string>
    <string name="message_dialog_msg_category_in_use">Данная категория используется в записях. Необходимо удалить записи или изменить их категории.</string>

    <!-- Debug Purpoues -->
    <string name="debug_error_category_exists">Ошибка добавления категории: категория с таким именем уже существует в DataManager</string>

    <!-- Months Converter -->
    <string name="month_jan">января</string>
    <string name="month_feb">февраля</string>
    <string name="month_mar">марта</string>
    <string name="month_apr">апреля</string>
    <string name="month_may">мая</string>
    <string name="month_jun">июня</string>
    <string name="month_jul">июля</string>
    <string name="month_aug">августа</string>
    <string name="month_sep">сентября</string>
    <string name="month_oct">октября</string>
    <string name="month_nov">ноября</string>
    <string name="month_dec">декабря</string>
    <string name="title_activity_record_edit">RecordEditActivity</string>
</resources>
