<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="320sp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categoryEditText"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"
        android:inputType="textCapSentences"
        android:background="@drawable/apptheme_edit_text_holo_light"
        android:layout_marginTop="20sp"
        android:layout_marginRight="@dimen/dialog_horizontal_margin"
        android:layout_marginLeft="@dimen/dialog_horizontal_margin"
        android:layout_marginBottom="5sp"
        android:textSize="@dimen/dialog_edit_text_size" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_dialog_check"
        android:id="@+id/categoryPrioCheckBox"
        android:layout_gravity="left|center_horizontal"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="25sp"
        android:textSize="@dimen/dialog_check_box_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/errorTextView"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="25sp"
        android:textSize="@dimen/dialog_error_text_size"
        android:visibility="gone"
        android:textColor="@color/errorTextColor" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25sp"
        android:background="@color/categoryDialogBtnPadLayoutColor"
        android:visibility="visible">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_dialog_delete_text"
            android:id="@+id/categoryDeleteButton"
            android:layout_weight="1"
            android:background="@drawable/cat_dialog_btn"
            android:textAllCaps="false"
            android:layout_marginRight="1sp"
            android:textSize="16sp"
            android:textColor="@color/categoryDialogButtonTextColor"
            android:layout_marginTop="1sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_dialog_cancel_text"
            android:id="@+id/categoryCancelButton"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/cat_dialog_btn"
            android:textSize="16sp"
            android:textColor="@color/categoryDialogButtonTextColor"
            android:layout_marginTop="1sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_dialog_save_text"
            android:id="@+id/categorySaveButton"
            android:layout_weight="1"
            android:background="@drawable/cat_dialog_btn"
            android:textAllCaps="false"
            android:layout_marginLeft="1sp"
            android:textSize="16sp"
            android:textColor="@color/categoryDialogButtonTextColor"
            android:layout_marginTop="1sp" />
    </LinearLayout>
</LinearLayout>