<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="320sp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_label_text"
                android:id="@+id/textView"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dialog_horizontal_margin"
                android:gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recordAmountEditText"
                android:singleLine="true"
                android:background="@drawable/apptheme_edit_text_holo_light"
                android:layout_marginRight="@dimen/dialog_horizontal_margin"
                android:layout_marginLeft="@dimen/dialog_horizontal_margin"
                android:textSize="@dimen/dialog_amount_edit_text_size"
                android:gravity="center"
                android:numeric="signed|decimal"
                android:textColor="@color/amountTextColor"
                android:layout_marginTop="@dimen/dialog_vertical_margin"
                android:layout_marginBottom="@dimen/dialog_vertical_margin" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center_vertical"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_label_text"
                android:id="@+id/textView2"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dialog_horizontal_margin" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/recordDateEditText"
                android:focusable="false"
                android:editable="false"
                android:longClickable="false"
                android:cursorVisible="false"
                android:paddingLeft="12sp"
                android:paddingRight="12sp"
                android:background="@drawable/apptheme_edit_text_holo_light"
                android:layout_marginRight="@dimen/dialog_horizontal_margin"
                android:layout_marginLeft="@dimen/dialog_horizontal_margin"
                android:textSize="@dimen/dialog_edit_text_size"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recordCategorySpinner"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="@dimen/dialog_horizontal_margin"
        android:layout_marginLeft="@dimen/dialog_horizontal_margin"
        android:layout_marginTop="@dimen/dialog_vertical_margin"
        android:background="@drawable/cat_spinner_style"
        android:paddingLeft="@dimen/dialog_spinner_horizontal_padding"
        android:paddingRight="@dimen/dialog_spinner_horizontal_padding"
        android:paddingTop="@dimen/dialog_spinner_vertical_padding"
        android:paddingBottom="@dimen/dialog_spinner_vertical_padding" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recordCommentEditText"
        android:layout_marginTop="@dimen/dialog_vertical_margin"
        android:editable="true"
        android:lines="3"
        android:background="@drawable/descr_text_style"
        android:gravity="top|left"
        android:maxLines="3"
        android:maxLength="96"
        android:hint="@string/comment_textview_hint"
        android:textSize="@dimen/dialog_edit_text_size"
        android:padding="8dp"
        android:textColorHint="@color/labelHintPrimaryColor"
        android:textColor="@color/editTextPrimaryColor"
        android:inputType="textCapSentences|textMultiLine"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="@dimen/dialog_horizontal_margin"
        android:layout_marginLeft="@dimen/dialog_horizontal_margin" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25sp"
        android:background="@color/categoryDialogBtnPadLayoutColor"
        android:visibility="visible">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_dialog_delete_text"
            android:id="@+id/recordDeleteButton"
            android:layout_weight="1"
            android:background="@drawable/cat_dialog_btn"
            android:textAllCaps="false"
            android:layout_marginRight="1sp"
            android:textSize="16sp"
            android:textColor="@color/recordDialogButtonTextColor"
            android:layout_marginTop="1sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_dialog_cancel_text"
            android:id="@+id/recordCancelButton"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/cat_dialog_btn"
            android:textSize="16sp"
            android:textColor="@color/recordDialogButtonTextColor"
            android:layout_marginTop="1sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_dialog_save_text"
            android:id="@+id/recordSaveButton"
            android:layout_weight="1"
            android:background="@drawable/cat_dialog_btn"
            android:textAllCaps="false"
            android:layout_marginLeft="1sp"
            android:textSize="16sp"
            android:textColor="@color/recordDialogButtonTextColor"
            android:layout_marginTop="1sp" />
    </LinearLayout>
</LinearLayout>